# kuka_screwdriving_utils

force_sensor/: CMakeLists.txt  package.xml
force_sensor/scripts/: ft_ati_publisher.py
force_sensor/src/: check_touch_service.cpp
force_sensor/srv/: CheckTouch.srv
tf/: CMakeLists.txt  CMakeLists.txt.user.f5722c6  package.xml
tf/src/: compute_center_service.cpp  tf_publish_service.cpp
tf/srv/: TfPublish.srv
yolov8/: CMakeLists.txt  depth1.csv  depth111.csv  package.xml  topic_camera.txt
yolov8/scripts/: detect.py  offline_detect.py
yolov8/src/: object_detection_service.cpp
yolov8/srv/: ObjectDetection.srv
